DAQ-4318 & DAQ-4424 Return Dimension names ordered within a dimension
- Simplify AbstractPosition equals
- AbstractPositions should have dimension names explicitly set

Change-Id: I80aa864d13d3bf14382dd61884213c06f394a149